preparing training data

--- a/RNN-Music/app.ipynb
+++ b/RNN-Music/app.ipynb
@@ -46,24 +46,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\adith\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\pretty_midi\\pretty_midi.py:100: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file.  Tempo, Key or Time Signature may be wrong.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_directory = \"./dataset/\"\n",
     "notes = load_midi_files(data_directory)\n",
     "pitchnames = sorted(set(note[0] for note in notes))\n",
     "note_to_int = dict((note, number) for number, note in enumerate(pitchnames))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence_length = 100\n",
+    "n_vocab = len(pitchnames)\n",
+    "network_input = []\n",
+    "network_output = []\n",
+    "\n",
+    "for i in range(len(notes) - sequence_length):\n",
+    "    sequence_in = notes[i:i + sequence_length]\n",
+    "    sequence_out = notes[i + sequence_length]\n",
+    "    network_input.append([note_to_int[note[0]] for note in sequence_in])\n",
+    "    network_output.append(note_to_int[sequence_out[0]])\n",
+    "\n",
+    "n_patterns = len(network_input)\n",
+    "network_input = np.reshape(network_input, (n_patterns, sequence_length, 1))\n",
+    "network_input = network_input / float(n_vocab)\n",
+    "network_output = tf.keras.utils.to_categorical(network_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
