trained only for 3 epochs and got bad music

--- a/RNN-Music/app.ipynb
+++ b/RNN-Music/app.ipynb
@@ -81,6 +81,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(LSTM(256, input_shape=(network_input.shape[1], network_input.shape[2]), return_sequences=True))\n",
+    "model.add(Dropout(0.3))\n",
+    "model.add(LSTM(256))\n",
+    "model.add(Dense(n_vocab, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "62/62 [==============================] - 35s 523ms/step - loss: 3.8769\n",
+      "Epoch 2/3\n",
+      "62/62 [==============================] - 31s 505ms/step - loss: 3.8551\n",
+      "Epoch 3/3\n",
+      "62/62 [==============================] - 31s 491ms/step - loss: 3.8508\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x201d5006470>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compile(loss='categorical_crossentropy', optimizer=Adamax(learning_rate=0.001))\n",
+    "model.fit(network_input, network_output, epochs=3, batch_size=64)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='output.mp3'>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#notes to meaningful music\n",
+    "start = np.random.randint(0, len(network_input)-1)\n",
+    "pattern = network_input[start]\n",
+    "prediction_output = []\n",
+    "\n",
+    "for _ in range(500):\n",
+    "    prediction_input = np.reshape(pattern, (1, len(pattern), 1))\n",
+    "    prediction_input = prediction_input / float(n_vocab)\n",
+    "    prediction = model.predict(prediction_input, verbose=0)\n",
+    "    index = np.argmax(prediction)\n",
+    "    result = pitchnames[index]\n",
+    "    prediction_output.append(result)\n",
+    "    pattern = np.append(pattern, index)\n",
+    "    pattern = pattern[1:]\n",
+    "\n",
+    "midi_stream = pretty_midi.PrettyMIDI()\n",
+    "piano_program = pretty_midi.instrument_name_to_program('Acoustic Grand Piano')\n",
+    "piano = pretty_midi.Instrument(program=piano_program)\n",
+    "\n",
+    "for pitch in prediction_output:\n",
+    "    note = pretty_midi.Note(\n",
+    "        velocity=69, pitch=int(pitch), start=0, end=30\n",
+    "    )\n",
+    "    piano.notes.append(note)\n",
+    "\n",
+    "midi_stream.instruments.append(piano)\n",
+    "output_path = \"output.mid\"  \n",
+    "midi_stream.write(output_path)\n",
+    "\n",
+    "audio_path = \"output.mp3\"  \n",
+    "AudioSegment.from_file(output_path).export(audio_path, format=\"mp3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
