--- a/CNN-TestClassi/my_cnn_book.ipynb
+++ b/CNN-TestClassi/my_cnn_book.ipynb
@@ -366,7 +366,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x,y,random_state=0, test_size=0.3)"
+   ]
   }
  ],
  "metadata": {
