some preprocessing which was forgotten

--- a/CNN-TestClassi/my_cnn_book.ipynb
+++ b/CNN-TestClassi/my_cnn_book.ipynb
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df[df.columns[:-1]].values"
+    "X = df[df.columns[:-1]].values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +288,18 @@
        "       [  1.   ,  93.   ,  70.   , ...,  30.4  ,   0.315,  23.   ]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,18 +363,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X)\n",
+    "data = np.hstack((X, np.reshape(y, (-1, 1))))\n",
+    "transformed_df = pd.DataFrame(data, columns=df.columns)\n",
+    "\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "over = RandomOverSampler()\n",
+    "X, y = over.fit_resample(X, y)\n",
+    "data = np.hstack((X, np.reshape(y, (-1, 1))))\n",
+    "transformed_df = pd.DataFrame(data, columns=df.columns)\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x,y,random_state=0, test_size=0.3)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,random_state=0, test_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,11 +400,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001), loss=tf.keras.losses.BinaryCrossentropy, metrics=['accuracy'])"
+    "model = tf.keras.Sequential([\n",
+    "                             tf.keras.layers.Dense(16, activation='relu'), \n",
+    "                             tf.keras.layers.Dense(16, activation='relu'),\n",
+    "                             tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "47/47 [==============================] - 1s 1ms/step - loss: 0.6844 - accuracy: 0.5314\n",
+      "Epoch 2/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.6466 - accuracy: 0.6600\n",
+      "Epoch 3/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.6153 - accuracy: 0.7043\n",
+      "Epoch 4/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.5820 - accuracy: 0.7171\n",
+      "Epoch 5/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.5515 - accuracy: 0.7329\n",
+      "Epoch 6/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.5308 - accuracy: 0.7386\n",
+      "Epoch 7/20\n",
+      "47/47 [==============================] - 0s 2ms/step - loss: 0.5164 - accuracy: 0.7514\n",
+      "Epoch 8/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.5075 - accuracy: 0.7529\n",
+      "Epoch 9/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.5018 - accuracy: 0.7486\n",
+      "Epoch 10/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.4967 - accuracy: 0.7471\n",
+      "Epoch 11/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.4948 - accuracy: 0.7471\n",
+      "Epoch 12/20\n",
+      "47/47 [==============================] - 0s 996us/step - loss: 0.4900 - accuracy: 0.7571\n",
+      "Epoch 13/20\n",
+      "47/47 [==============================] - 0s 893us/step - loss: 0.4880 - accuracy: 0.7457\n",
+      "Epoch 14/20\n",
+      "47/47 [==============================] - 0s 909us/step - loss: 0.4852 - accuracy: 0.7457\n",
+      "Epoch 15/20\n",
+      "47/47 [==============================] - 0s 909us/step - loss: 0.4836 - accuracy: 0.7500\n",
+      "Epoch 16/20\n",
+      "47/47 [==============================] - 0s 1000us/step - loss: 0.4823 - accuracy: 0.7657\n",
+      "Epoch 17/20\n",
+      "47/47 [==============================] - 0s 978us/step - loss: 0.4795 - accuracy: 0.7543\n",
+      "Epoch 18/20\n",
+      "47/47 [==============================] - 0s 981us/step - loss: 0.4785 - accuracy: 0.7614\n",
+      "Epoch 19/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.4768 - accuracy: 0.7600\n",
+      "Epoch 20/20\n",
+      "47/47 [==============================] - 0s 1ms/step - loss: 0.4769 - accuracy: 0.7600\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x127643322f0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, batch_size=15, epochs=20)"
    ]
   },
   {
