not bad of an accuracy

--- a/CNN-TestClassi/my_cnn_book.ipynb
+++ b/CNN-TestClassi/my_cnn_book.ipynb
@@ -482,6 +482,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/22 [==============================] - 0s 2ms/step - loss: 0.4721 - accuracy: 0.7686\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.4720515310764313, 0.7685714364051819]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 0s 1ms/step - loss: 0.4462 - accuracy: 0.7833\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.44618529081344604, 0.7833333611488342]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
