--- a/CNN-TestClassi/wine_review.ipynb
+++ b/CNN-TestClassi/wine_review.ipynb
@@ -362,6 +362,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, val, test = np.split(df.sample(frac=1), [int(0.8*len(df)), int(0.9*len(df))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_to_dataset(dataframe, shuffle=True, batch_size=1024):\n",
+    "  df = dataframe.copy()\n",
+    "  labels = df.pop('label')\n",
+    "  df = df[\"description\"]\n",
+    "  ds = tf.data.Dataset.from_tensor_slices((df, labels))\n",
+    "  if shuffle:\n",
+    "    ds = ds.shuffle(buffer_size=len(dataframe))\n",
+    "  ds = ds.batch(batch_size)\n",
+    "  ds = ds.prefetch(tf.data.AUTOTUNE)\n",
+    "  return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = df_to_dataset(train)\n",
+    "test_data = df_to_dataset(test)\n",
+    "valid_data = df_to_dataset(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
