creating the model

--- a/CNN-TestClassi/wine_review.ipynb
+++ b/CNN-TestClassi/wine_review.ipynb
@@ -400,6 +400,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(1024,), dtype=string, numpy=\n",
+       " array([b\"Affordable and appetizing, this has a lighter color and subtle smoke and toasted oak aromas. A firm texture accompanies just enough tannins and acidity, and bright red cherry and black tea flavors. It's lean in a good way, with excellent balance and a touch of austerity rather than overt richness.\",\n",
+       "        b'Concentrated lilac and violet flowers paint a pretty picture to the beef char and creosote darkness on the nose of this bottling from a Los Olives vineyard. The palate blends boysenberry, blackberry, coffee and bittersweet dark chocolate, loaded atop a very firm structure.',\n",
+       "        b\"This is Drouhan's second vintage of handling the vines, wines and marketing in partnership with the Hospices de Belleville charity. This open generous wine is packed with ripe red fruit and given shape by light tannins. There is a fresh crisp aftertaste that gives the wine a great lift.\",\n",
+       "        ...,\n",
+       "        b'Made entirely with the Corvina grape, this brawny wine conveys aromas of blackberry, mocha and baking spices. The smooth, dense palate offers up blueberry extract, grilled herbs, chocolate, vanilla and licorice alongside velvety, enveloping tannins. Enjoy through 2018.',\n",
+       "        b'Lightly herbaceous, this is a ripe, lively wine. Grapefruit and lemon zest flavors are complemented by fuller apple and quince flavors. A tight minerality in the background will allow the wine to age. Drink from 2016.',\n",
+       "        b\"This Bordeaux-style blend\\xe2\\x80\\x9457% Merlot, 40% Cabernet Sauvignon and 3% Cabernet Franc\\xe2\\x80\\x94shows California ripeness, with blackberries, cherries and currants co-starring alongside sweet, smoky oak. It's a good wine for drinking now.\"],\n",
+       "       dtype=object)>,\n",
+       " <tf.Tensor: shape=(1024,), dtype=int32, numpy=array([0, 1, 0, ..., 1, 0, 0])>)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(train_data)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using a pre-built text model\n",
+    "embedding = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
+    "hub_layer = hub.KerasLayer(embedding, dtype=tf.string, trainable=True)\n",
+    "\n",
+    "model = tf.keras.Sequential()\n",
+    "model.add(hub_layer)\n",
+    "model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dropout(0.4))\n",
+    "model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dropout(0.4))\n",
+    "model.add(tf.keras.layers.Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102/102 [==============================] - 2s 10ms/step - loss: 0.7117 - accuracy: 0.3859\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7116906642913818, 0.3859352171421051]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
