some good accuracy

--- a/CNN-TestClassi/wine_review.ipynb
+++ b/CNN-TestClassi/wine_review.ipynb
@@ -486,6 +486,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "102/102 [==============================] - 113s 1s/step - loss: 0.6477 - accuracy: 0.6134 - val_loss: 0.5489 - val_accuracy: 0.7342\n",
+      "Epoch 2/5\n",
+      "102/102 [==============================] - 115s 1s/step - loss: 0.4947 - accuracy: 0.7584 - val_loss: 0.4008 - val_accuracy: 0.8166\n",
+      "Epoch 3/5\n",
+      "102/102 [==============================] - 107s 1s/step - loss: 0.4078 - accuracy: 0.8231 - val_loss: 0.3764 - val_accuracy: 0.8273\n",
+      "Epoch 4/5\n",
+      "102/102 [==============================] - 117s 1s/step - loss: 0.3690 - accuracy: 0.8437 - val_loss: 0.3707 - val_accuracy: 0.8317\n",
+      "Epoch 5/5\n",
+      "102/102 [==============================] - 122s 1s/step - loss: 0.3425 - accuracy: 0.8557 - val_loss: 0.3723 - val_accuracy: 0.8326\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(train_data, epochs=5, validation_data=valid_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13/13 [==============================] - 1s 112ms/step - loss: 0.3763 - accuracy: 0.8314\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.3763381242752075, 0.8313586711883545]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
