--- a/CNN-TestClassi/wine_review.ipynb
+++ b/CNN-TestClassi/wine_review.ipynb
@@ -539,6 +539,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(1024,), dtype=string, numpy=\n",
+       " array([b'This field blend of Grenache, Zinfandel, Carignane and Cinsault was fermented in stainless steel and partially aged in neutral oak. Its strawberry and orange flavors combine effortlessly within its light, dry frame.',\n",
+       "        b\"You've got to hand it to the folks at this estate: they make nice wines at low prices. This Sicilian Chardonnay is bright and creamy with aromas of orange blossom, almond, golden honey and mature apricot. The wine feels crisp and pristine in the mouth. Very nice.\",\n",
+       "        b\"Fragrant blue flower, plum, cake spice and a whiff of leather are some of the aromas you'll find on this stunning wine. Made with organically farmed Sangiovese, the juicy, delicious palate doles out ripe black cherry, fleshy blackberry, white pepper, licorice and grilled herb. It's open and well balanced, with firm, polished tannins. Drink through 2020.\",\n",
+       "        ...,\n",
+       "        b'This wine, while rich, has all the minerality and crisp texture associated with the appellation. Wood aging adds spice. It needs some aging, not much, and will be ready to drink from 2019.',\n",
+       "        b'It seems strange to have such a heavy, expensive bottle for a wine at this price. The soft, off-dry Chardonnay inside has a lightly fruity character, showing white fruits and the softest texture. It is easy and ready to drink.',\n",
+       "        b\"Though labeled a white wine, this more properly may be called a ros\\xc3\\xa9. It's a pale copper color, made from a mix of Pinot Noir and Pinot Meunier grapes that were pressed lightly to minimize color extraction prior to fermentation in stainless steel. It offers a mix of tree fruits, toasted nuts and tart acids.\"],\n",
+       "       dtype=object)>,\n",
+       " <tf.Tensor: shape=(1024,), dtype=int32, numpy=array([0, 0, 1, ..., 1, 0, 0])>)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test_data)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_wine_desc(wine_desc):\n",
+    "    new_description = [wine_desc]\n",
+    "    new_description_dataset = tf.data.Dataset.from_tensor_slices(new_description)\n",
+    "    new_description_dataset = new_description_dataset.batch(1)\n",
+    "\n",
+    "    predictions = model.predict(new_description_dataset)\n",
+    "    threshold = 0.5\n",
+    "    predicted_labels = [1 if prediction > threshold else 0 for prediction in predictions]\n",
+    "    return predicted_labels[0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 104ms/step\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_wine_desc(\"Wine wasn't good\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
